'fix:在text-align:center时icon有问题'

--- a/packages/theme-chalk/src/infinite-steps.scss
+++ b/packages/theme-chalk/src/infinite-steps.scss
@@ -2,6 +2,7 @@
 @import '../../../node_modules/element-ui/packages/theme-chalk/src/steps.scss';
 
 .infinite-steps-container {
+  text-align: left;
   &.el-steps--simple {
     background: #f5f7fa;
   }
